overlays/app_ssl_nginx/httpbin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-httpbin
  annotations:
    # You might have to change to the appropriate cluster issuer
    cert-manager.io/cluster-issuer: "letsencrypt-dns-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - REDACTED
    secretName: httpbin-tls
  rules:
  - host: REDACTED
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: httpbin
            port:
              number: 8000
